k8s-configs/ping-cloud/base/pingfederate/engine/cloud-generic/service.yaml
#
# This service exposes the pingfederate runtime ports to the cluster.
#
apiVersion: v1
kind: Service
metadata:
  name: pingfederate
spec:
  ports:
  - port: 9031
    name: pf-runtime
    targetPort: pf-runtime
  - port: 8080
    name: metrics
  - port: 8079
    name: pf-heartbeat
  - port: 1812
    name: pf-radius-listener
  - port: 1813
    name: pf-radius-accounting
  selector:
    role: pingfederate-engine


---

# Service that exposes the pingfederate engine radius ports

kind: Service
apiVersion: v1
metadata:
  name: udp-loadbalancer
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
    external-dns.alpha.kubernetes.io/hostname: pingfederate-radius-dev.ping-demo.com
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    role: pingfederate-engine
  ports:
  - name: radius-listener
    protocol: UDP
    port: 1812
    targetPort: 1812
  - name: radius-accounting
    protocol: UDP
    port: 1813
    targetPort: 1813
